--- a/style.css
+++ b/style.css
@@ -1,181 +1,181 @@
 body {
     margin: 0;
     font-family: VERDANA c4a8a8
-}
-
-.container{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-.box {
-  float: left;
-  display: box;
-  margin: 8px;
-  padding: 10px 10px 10px 10px;
-  border: 1px solid #ddd;
-}
-
-.box:hover{
-  box-shadow: 5px 5px 2px grey;
-}
-
-
-.textboxes{
-  width: 90%;
-  margin: 5px;
-}
-
-textarea{
-  height: 100px;
-  padding: 5px;
-}
-
-un{
-  list-style-type: circle;
-  float: right
-}
-
-li {
-  display: inline;
-  font-size: 12px;
-  font-style: italic;
-  margin: 0 3px;
-}
-
-.footer{
-  clear: both;
-  padding: 10px;
-  background-color: #555;
-  color: white;
-  text-align: center;
-
-}
-
-.footer a{
-  text-decoration: none;
-  color: #5ba2e9
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 15px;
-}
-
-.active {
-  background-color: rgb(45, 106, 236);
-  /* χρώμα αρχικής*/
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 15px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  /*χρώμα υπομενού*/
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-@media screen and (max-width: 600px) {
-
-  .topnav a:not(:first-child),
+  }
+  
+  .container{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  
+  .box {
+    float: left;
+    display: box;
+    margin: 8px;
+    padding: 10px 10px 10px 10px;
+    border: 1px solid #ddd;
+  }
+  
+  .box:hover{
+    box-shadow: 5px 5px 2px grey;
+  }
+  
+  
+  .textboxes{
+    width: 90%;
+    margin: 5px;
+  }
+  
+  textarea{
+    height: 100px;
+    padding: 5px;
+  }
+  
+  un{
+    list-style-type: circle;
+    float: right
+  }
+  
+  li {
+    display: inline;
+    font-size: 12px;
+    font-style: italic;
+    margin: 0 3px;
+  }
+  
+  .footer{
+    clear: both;
+    padding: 10px;
+    background-color: #555;
+    color: white;
+    text-align: center;
+  
+  }
+  
+  .footer a{
+    text-decoration: none;
+    color: #5ba2e9
+  }
+  
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 15px;
+  }
+  
+  .active {
+    background-color: #4CAF50;
+    /* χρώμα αρχικής*/
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
   .dropdown .dropbtn {
-      display: none;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
   }
-
-  .topnav a.icon {
-      float: right;
-      display: block;
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    /*χρώμα υπομενού*/
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
   }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-      position: relative;
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
   }
-
-  .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
+  
+  .topnav a:hover,
+  .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
   }
-
-  .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
   }
-
-  .topnav.responsive .dropdown {
-      float: none;
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
-
-  .topnav.responsive .dropdown-content {
-      position: relative;
+  
+  @media screen and (max-width: 600px) {
+  
+    .topnav a:not(:first-child),
+    .dropdown .dropbtn {
+        display: none;
+    }
+  
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
   }
-
-  .topnav.responsive .dropdown .dropbtn {
-      display: block;
-      width: 100%;
-      text-align: left;
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+  
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+  
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+  
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+  
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+  
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
   }
-}
