--- a/style.css
+++ b/style.css
@@ -3,11 +3,18 @@ body {
     font-family: VERDANA c4a8a8
 }
 
-.container{
-  display: flex;
-  flex-wrap: wrap;
+div.container {
+  margin-left: 50px;
+  padding: 1px 16px;
+  height: 1000px;
+  width: 100;
 }
 
+
+.card-info{
+  display: inline-block;
+  margin-left: 8px;
+}
 
 .box {
   float: left;
@@ -32,14 +39,10 @@ textarea{
   padding: 5px;
 }
 
-un{
-  list-style-type: circle;
-  float: right
-}
 
 li {
-  display: inline;
-  font-size: 12px;
+  list-style-type: none;
+  font-size: 14px;
   font-style: italic;
   margin: 0 3px;
 }
@@ -47,42 +50,85 @@ li {
 .footer{
   clear: both;
   padding: 10px;
-  background-color: #555;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
   color: white;
   text-align: center;
-
 }
+
 
 .footer a{
   text-decoration: none;
   color: #5ba2e9
 }
 
-.topnav {
-  overflow: hidden;
+.sidebar {
+  float: left;
+  margin: 0;
+  padding: 0;
+  position: absolute;
   background-color: #333;
+  height: 100%; 
+  width: 50px;
+  z-index: 1;
+}
+
+.sidebar span {
+  font-family: 'Raleway', sans-serif;
+  font-size:14px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  bottom: 0;
+  left: 47px;
+  line-height: 38px;
+  overflow: hidden;
+  position: absolute;
+  padding: 0;
+  white-space: nowrap;
+  width: 0;  
+}
+
+.sidebar, .sidebar span, .sidebar a{
+  /* CSS3 Transition: */
+  -webkit-transition: 0.50s;
+  /* Future proofing (these do not work yet): */
+  -moz-transition: 0.50s;
+  transition: 0.50s;  
+} 
+
+.sidebar a {
+  display: block;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 14px 16px;
+  position: relative;
+  font-size: 15px;
 }
 
 
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 15px;
+.sidebar a:hover, 
+.dropdown:hover .dropbtn {
+  width:250px;
+  text-decoration:none;
+  background-color: #5ba2e9;
+  color: white;
+}
+
+
+.sidebar a:hover span{ 
+  width: auto;
+  padding: 0 30px;
+  overflow: visible; 
 }
 
 .active {
   background-color: rgb(45, 106, 236);
   /* χρώμα αρχικής*/
   color: white;
-}
-
-.topnav .icon {
-  display: none;
 }
 
 .dropdown {
@@ -105,7 +151,6 @@ li {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  /*χρώμα υπομενού*/
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -120,11 +165,6 @@ li {
   text-align: left;
 }
 
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
 
 .dropdown-content a:hover {
   background-color: #ddd;
@@ -132,50 +172,42 @@ li {
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  display: inline-block;
 }
 
-@media screen and (max-width: 600px) {
-
-  .topnav a:not(:first-child),
-  .dropdown .dropbtn {
-      display: none;
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {
+    float: left;
   }
 
-  .topnav a.icon {
-      float: right;
-      display: block;
+  .sidebar a:hover{
+    width: 120px;
+  }
+  .sidebar a:hover span{
+    padding: 0 5px;
+  }
+  .sidebar:hover{
+    width: 100%;
+  }
+  
+
+  div.content {
+    margin-left: 0;
+    margin-top: 50px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-      position: relative;
-  }
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px){
 
-  .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-  }
-
-  .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-  }
-
-  .topnav.responsive .dropdown {
-      float: none;
-  }
-
-  .topnav.responsive .dropdown-content {
-      position: relative;
-  }
-
-  .topnav.responsive .dropdown .dropbtn {
-      display: block;
-      width: 100%;
-      text-align: left;
+  .sidebar a {
+    text-align: center;
+    float: none;
   }
 }
