--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 body {
     margin: 0;
-    font-family: VERDANA c4a8a8
+    font-family: VERDANA c4a8a8;
+    background: url(bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 div.container {
   margin-left: 50px;
   padding: 1px 16px;
-  height: 1000px;
-  width: 100;
+  height: 100%;
+  width: 100%;
+
 }
 
 
@@ -19,6 +25,7 @@ div.container {
 .box {
   float: left;
   display: box;
+  color: white;
   margin: 8px;
   padding: 10px 10px 10px 10px;
   border: 1px solid #ddd;
@@ -47,29 +54,13 @@ li {
   margin: 0 3px;
 }
 
-.footer{
-  clear: both;
-  padding: 10px;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #333;
-  color: white;
-  text-align: center;
-}
-
-
-.footer a{
-  text-decoration: none;
-  color: #5ba2e9
-}
 
 .sidebar {
   float: left;
   margin: 0;
   padding: 0;
   position: absolute;
-  background-color: #333;
+  background-color: black;
   height: 100%; 
   width: 50px;
   z-index: 1;
