--- a/style.css
+++ b/style.css
@@ -18,18 +18,38 @@ body {
 
 }
 
-
-.card-info{
-  display: inline-block;
-  margin-left: 8px;
+.box {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 100px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.box {
-  float: left;
+.avatar{
   display: block;
-  color: white;
-  margin: 50px;
-  padding: 10px 10px 10px 10px;
+  width: 100px;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 100%;
+  border: 2px solid white;
+  box-shadow: 5px 5px 8px black;
+}
+
+h2{
+  font-family: sans-serif;
+  font-size: 1.35em;
+  font-weight: bold;
+}
+
+.card-info{
+  display: block;
+  text-align: center;
 }
 
 /*
@@ -52,7 +72,6 @@ li {
   list-style-type: none;
   font-size: 14px;
   font-style: italic;
-  margin: 0 3px;
 }
 
 
