--- a/style.css
+++ b/style.css
@@ -88,13 +88,13 @@ li {
 
 .sidebar span {
   font-family: 'Impact', sans-serif;
-  font-size:16px;
+  font-size:18px;
   font-weight: 400;
   letter-spacing: 1px;
   text-transform: uppercase;
   bottom: 0;
   left: 47px;
-  line-height: 38px;
+  line-height: 45px;
   overflow: hidden;
   position: absolute;
   padding: 0;
@@ -148,8 +148,8 @@ li {
 
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f9f9f9;
+  position: relative;
+  background-color: #333;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -158,7 +158,7 @@ li {
 .dropdown-content a {
   float: none;
   font-family: "Tahoma", sans-serif;
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -167,8 +167,8 @@ li {
 
 
 .dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #5ba2e1;
+  color: white;
 }
 
 .dropdown:hover .dropdown-content {
