--- a/style.css
+++ b/style.css
@@ -42,14 +42,32 @@ body {
 }
 
 h2{
-  font-family: sans-serif;
-  font-size: 1.35em;
+  font-family: 'Courgette', cursive;
+  font-size: 1.85em;
   font-weight: bold;
 }
 
 .card-info{
   display: block;
   text-align: center;
+}
+
+button{
+  display: inline-block;
+  border: none;
+  background: black;
+  color: white;
+  font-family: 'Hammersmith One', sans-serif;
+  font-size: 1.1em;
+  height: 40px;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 5em;
+  cursor: pointer;
+}
+
+button:hover{
+  background: #4d94ff;
 }
 
 /*
