url changes for images

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: VERDANA c4a8a8;
-    background: url(bg.jpg) no-repeat center center fixed; 
+    background: url("../img/bg.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
