--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: VERDANA c4a8a8;
+    font-size: 16px;
     background: url("../img/bg.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -32,8 +33,8 @@ body {
 
 .avatar{
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 100%;
@@ -43,7 +44,7 @@ body {
 
 h2{
   font-family: 'Courgette', cursive;
-  font-size: 1.85em;
+  font-size: 2.2em;
   font-weight: bold;
 }
 
@@ -154,7 +155,7 @@ textarea{
 */
 li {
   list-style-type: none;
-  font-size: 14px;
+  font-size: 1.1em;
   font-style: italic;
 }
 
@@ -204,8 +205,7 @@ li {
 
 
 
-.sidebar a:hover, 
-.dropdown:hover{
+.sidebar a:hover{
   width:250px;
   text-decoration:none;
   background-color: #5ba2e9;
@@ -225,39 +225,6 @@ li {
   color: white;
 }
 
-.dropdown {
-  overflow: hidden;
-}
-
-.dropdown-content {
-  display: none;
-  position: relative;
-  background-color: #333;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  font-family: "Tahoma", sans-serif;
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-
-.dropdown-content a:hover {
-  background-color: #5ba2e1;
-  color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: inline-block;
-}
-
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
   .modal-content{
@@ -268,7 +235,12 @@ li {
     width: 100%;
     height: auto;
     position: relative;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
+
   .sidebar a {
     float: left;
   }
